active profile changes