@@ -1,6 +1,8 @@
 package com.manacommunity.api.constants;
 
 import java.util.List;
+import java.util.stream.Stream;
+import java.util.Collections;
 
 /**
  * PermissionConstants — Single source of truth for all permission keys used in the system.
@@ -23,11 +25,39 @@ public final class PermissionConstants {
     public static final String DELETE_POST     = "Delete Post";
     public static final String COMMENT_ON_POST = "Comment on Post";
 
-    // ──── SPORTS ────────────────────────────────────────────────────
-    public static final String VIEW_SPORTS        = "View Sports";
-    public static final String REGISTER_SPORTS    = "Register Sports";
-    public static final String MANAGE_TOURNAMENTS = "Manage Tournaments";
-    public static final String BIDDING_INTERFACE  = "Bidding Interface";
+    // ──── SPORTS — GRANULAR PERMISSIONS ─────────────────────────────
+    // Main
+    public static final String VIEW_SPORTS_MAIN          = "View Sports Main";
+    public static final String CREATE_EDIT_SPORTS_MAIN   = "Create/Edit Sports Main";
+    public static final String DELETE_SPORTS_MAIN        = "Delete Sports Main";
+    // Sports Menu
+    public static final String VIEW_SPORTS_MENU          = "View Sports Menu";
+    public static final String CREATE_EDIT_SPORTS_MENU   = "Create/Edit Sports Menu";
+    public static final String DELETE_SPORTS_MENU        = "Delete Sports Menu";
+    // Auction Configuration
+    public static final String VIEW_AUCTION_CONFIG       = "View Auction Configuration";
+    public static final String CREATE_EDIT_AUCTION_CONFIG = "Create/Edit Auction Configuration";
+    public static final String DELETE_AUCTION_CONFIG      = "Delete Auction Configuration";
+    // Live Auction
+    public static final String VIEW_LIVE_AUCTION         = "View Live Auction";
+    public static final String CREATE_EDIT_LIVE_AUCTION  = "Create/Edit Live Auction";
+    public static final String DELETE_LIVE_AUCTION       = "Delete Live Auction";
+    // Teams Dashboard
+    public static final String VIEW_TEAMS_DASHBOARD      = "View Teams Dashboard";
+    public static final String CREATE_EDIT_TEAMS_DASHBOARD = "Create/Edit Teams Dashboard";
+    public static final String DELETE_TEAMS_DASHBOARD    = "Delete Teams Dashboard";
+    // Player Pool
+    public static final String VIEW_PLAYER_POOL          = "View Player Pool";
+    public static final String CREATE_EDIT_PLAYER_POOL   = "Create/Edit Player Pool";
+    public static final String DELETE_PLAYER_POOL        = "Delete Player Pool";
+    // Event Registrations
+    public static final String VIEW_EVENT_REGISTRATIONS  = "View Event Registrations";
+    public static final String CREATE_EDIT_EVENT_REGISTRATIONS = "Create/Edit Event Registrations";
+    public static final String DELETE_EVENT_REGISTRATIONS = "Delete Event Registrations";
+    // Auction Results
+    public static final String VIEW_AUCTION_RESULTS      = "View Auction Results";
+    public static final String CREATE_EDIT_AUCTION_RESULTS = "Create/Edit Auction Results";
+    public static final String DELETE_AUCTION_RESULTS    = "Delete Auction Results";
 
     // ──── MARKETPLACE ───────────────────────────────────────────────
     public static final String VIEW_MARKETPLACE = "View Marketplace";
@@ -51,72 +81,96 @@ public final class PermissionConstants {
     public static final String MANAGE_COMMUNITIES = "Manage Communities";
     public static final String MANAGE_ROLES       = "Manage Roles";
 
+    // ──── SPORTS PERMISSION GROUPS ──────────────────────────────────
+    /** All 8 View sports permissions */
+    public static final List<String> ALL_SPORTS_VIEW_PERMISSIONS = List.of(
+            VIEW_SPORTS_MAIN, VIEW_SPORTS_MENU,
+            VIEW_AUCTION_CONFIG, VIEW_LIVE_AUCTION,
+            VIEW_TEAMS_DASHBOARD, VIEW_PLAYER_POOL,
+            VIEW_EVENT_REGISTRATIONS, VIEW_AUCTION_RESULTS
+    );
+
+    /** All 24 sports permissions */
+    public static final List<String> ALL_SPORTS_PERMISSIONS = List.of(
+            VIEW_SPORTS_MAIN, CREATE_EDIT_SPORTS_MAIN, DELETE_SPORTS_MAIN,
+            VIEW_SPORTS_MENU, CREATE_EDIT_SPORTS_MENU, DELETE_SPORTS_MENU,
+            VIEW_AUCTION_CONFIG, CREATE_EDIT_AUCTION_CONFIG, DELETE_AUCTION_CONFIG,
+            VIEW_LIVE_AUCTION, CREATE_EDIT_LIVE_AUCTION, DELETE_LIVE_AUCTION,
+            VIEW_TEAMS_DASHBOARD, CREATE_EDIT_TEAMS_DASHBOARD, DELETE_TEAMS_DASHBOARD,
+            VIEW_PLAYER_POOL, CREATE_EDIT_PLAYER_POOL, DELETE_PLAYER_POOL,
+            VIEW_EVENT_REGISTRATIONS, CREATE_EDIT_EVENT_REGISTRATIONS, DELETE_EVENT_REGISTRATIONS,
+            VIEW_AUCTION_RESULTS, CREATE_EDIT_AUCTION_RESULTS, DELETE_AUCTION_RESULTS
+    );
+
     /**
      * Master list of ALL permission keys in the system.
-     * Used by the seeder and can be exposed via API.
      */
-    public static final List<String> ALL_PERMISSIONS = List.of(
-            VIEW_FEED, CREATE_POST, DELETE_POST, COMMENT_ON_POST,
-            VIEW_SPORTS, REGISTER_SPORTS, MANAGE_TOURNAMENTS, BIDDING_INTERFACE,
-            VIEW_MARKETPLACE, CREATE_LISTING, DELETE_LISTING,
-            VIEW_JOBS, CREATE_JOB, APPLY_JOB,
-            VIEW_EVENTS, CREATE_EVENT, REGISTER_EVENT,
-            VIEW_ADMIN, VERIFY_KYC, BULK_UPLOAD, MANAGE_COMMUNITIES, MANAGE_ROLES
+    public static final List<String> ALL_PERMISSIONS = Collections.unmodifiableList(
+            Stream.of(
+                    List.of(VIEW_FEED, CREATE_POST, DELETE_POST, COMMENT_ON_POST),
+                    ALL_SPORTS_PERMISSIONS,
+                    List.of(VIEW_MARKETPLACE, CREATE_LISTING, DELETE_LISTING),
+                    List.of(VIEW_JOBS, CREATE_JOB, APPLY_JOB),
+                    List.of(VIEW_EVENTS, CREATE_EVENT, REGISTER_EVENT),
+                    List.of(VIEW_ADMIN, VERIFY_KYC, BULK_UPLOAD, MANAGE_COMMUNITIES, MANAGE_ROLES)
+            ).flatMap(List::stream).toList()
     );
 
-    public static final List<String> ADMIN_PERMISSIONS = List.of(
-            VIEW_FEED, CREATE_POST, DELETE_POST, COMMENT_ON_POST,
-            VIEW_SPORTS, REGISTER_SPORTS, MANAGE_TOURNAMENTS, BIDDING_INTERFACE,
-            VIEW_MARKETPLACE, CREATE_LISTING, DELETE_LISTING,
-            VIEW_JOBS, CREATE_JOB, APPLY_JOB,
-            VIEW_EVENTS, CREATE_EVENT, REGISTER_EVENT,
-            VIEW_ADMIN, VERIFY_KYC, BULK_UPLOAD, MANAGE_ROLES
+    public static final List<String> ADMIN_PERMISSIONS = Collections.unmodifiableList(
+            Stream.of(
+                    List.of(VIEW_FEED, CREATE_POST, DELETE_POST, COMMENT_ON_POST),
+                    ALL_SPORTS_PERMISSIONS,
+                    List.of(VIEW_MARKETPLACE, CREATE_LISTING, DELETE_LISTING),
+                    List.of(VIEW_JOBS, CREATE_JOB, APPLY_JOB),
+                    List.of(VIEW_EVENTS, CREATE_EVENT, REGISTER_EVENT),
+                    List.of(VIEW_ADMIN, VERIFY_KYC, BULK_UPLOAD, MANAGE_ROLES)
+            ).flatMap(List::stream).toList()
     );
 
-
-    public static final List<String> SPORTS_ADMIN_PERMISSIONS = List.of(
-            VIEW_FEED, CREATE_POST, COMMENT_ON_POST,
-            VIEW_SPORTS, REGISTER_SPORTS, MANAGE_TOURNAMENTS, BIDDING_INTERFACE,
-            VIEW_MARKETPLACE,
-            VIEW_JOBS,
-            VIEW_EVENTS, CREATE_EVENT, REGISTER_EVENT,
-            VIEW_ADMIN
+    public static final List<String> SPORTS_ADMIN_PERMISSIONS = Collections.unmodifiableList(
+            Stream.of(
+                    List.of(VIEW_FEED, CREATE_POST, COMMENT_ON_POST),
+                    ALL_SPORTS_PERMISSIONS,
+                    List.of(VIEW_MARKETPLACE),
+                    List.of(VIEW_JOBS),
+                    List.of(VIEW_EVENTS, CREATE_EVENT, REGISTER_EVENT),
+                    List.of(VIEW_ADMIN)
+            ).flatMap(List::stream).toList()
     );
-
-
 
     public static final List<String> MEMBER_PERMISSIONS = List.of(
             VIEW_FEED, CREATE_POST, COMMENT_ON_POST,
-                        VIEW_SPORTS, REGISTER_SPORTS, BIDDING_INTERFACE,
-                        VIEW_MARKETPLACE,
-                        VIEW_JOBS, APPLY_JOB,
-                        VIEW_EVENTS, REGISTER_EVENT
-                        );
+            VIEW_SPORTS_MAIN, VIEW_SPORTS_MENU,
+            VIEW_AUCTION_CONFIG, VIEW_LIVE_AUCTION,
+            VIEW_TEAMS_DASHBOARD, VIEW_PLAYER_POOL,
+            VIEW_EVENT_REGISTRATIONS, VIEW_AUCTION_RESULTS,
+            CREATE_EDIT_EVENT_REGISTRATIONS,
+            VIEW_MARKETPLACE,
+            VIEW_JOBS, APPLY_JOB,
+            VIEW_EVENTS, REGISTER_EVENT
+    );
 
-    // VENDOR
     public static final List<String> VENDOR_PERMISSIONS = List.of(
             VIEW_FEED, CREATE_POST, COMMENT_ON_POST,
-                        VIEW_SPORTS,
-                        VIEW_MARKETPLACE, CREATE_LISTING, DELETE_LISTING,
-                        VIEW_JOBS, CREATE_JOB,
-                        VIEW_EVENTS, REGISTER_EVENT
-                        );
+            VIEW_SPORTS_MAIN, VIEW_SPORTS_MENU,
+            VIEW_MARKETPLACE, CREATE_LISTING, DELETE_LISTING,
+            VIEW_JOBS, CREATE_JOB,
+            VIEW_EVENTS, REGISTER_EVENT
+    );
 
-    // CASHIER
     public static final List<String> CASHIER_PERMISSIONS = List.of(
             VIEW_FEED, COMMENT_ON_POST,
-                        VIEW_SPORTS,
-                        VIEW_MARKETPLACE,
-                        VIEW_JOBS,
-                        VIEW_EVENTS
-                        );
+            VIEW_SPORTS_MAIN, VIEW_SPORTS_MENU,
+            VIEW_MARKETPLACE,
+            VIEW_JOBS,
+            VIEW_EVENTS
+    );
 
-    // STAFF
     public static final List<String> STAFF_PERMISSIONS = List.of(
             VIEW_FEED, COMMENT_ON_POST,
-                        VIEW_SPORTS,
-                        VIEW_MARKETPLACE,
-                        VIEW_JOBS,
-                        VIEW_EVENTS
-                        );
+            VIEW_SPORTS_MAIN, VIEW_SPORTS_MENU,
+            VIEW_MARKETPLACE,
+            VIEW_JOBS,
+            VIEW_EVENTS
+    );
 }
